make todo list items sortable - drag & drop feature

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="build/react.js"></script>
   <script src="build/JSXTransformer.js"></script>
   <script src="build/jquery-editable-poshytip.min.js"></script>
+  <script src="build/jquery.sortable.min.js"></script>
   <script type="text/jsx" src="index.js"></script>
 
   <script>
